# pkg/http/controller.go
@@ -30,6 +30,7 @@ func (s *HTTPServer) CreateNetwork(c *gin.Context) {
 // @Produce json
 // @Param id path int true "Network ID"
 // @Success 200 {object} object
+// @Failure 400
 // @Failure 404
 // @Failure 500
 // @Router /api/networks/{id} [delete]
@@ -48,6 +49,15 @@ func (s *HTTPServer) DeleteNetwork(c *gin.Context) {
 	}
 }
 
+// @Summary CreateComponent
+// @Description Create a new component
+// @Accept json
+// @Produce json
+// @Param input body object true "Component data to create"
+// @Success 200 {object} model.Component
+// @Failure 400
+// @Failure 500
+// @Router /api/components [post]
 func (s *HTTPServer) CreateComponent(c *gin.Context) {
 	var component model.Component
 	if err := c.ShouldBindJSON(&component); err != nil {
@@ -62,6 +72,14 @@ func (s *HTTPServer) CreateComponent(c *gin.Context) {
 	}
 }
 
+// @Summary GetComponentByType
+// @Description Get Component By Type
+// @Param type query string true "Component type (e.g., l2geth)"
+// @Param network_id query integer true "Network ID"// @Produce json
+// @Success 200 {object} object
+// @Failure 400
+// @Failure 500
+// @Router /api/components [get]
 func (s *HTTPServer) GetComponentByType(c *gin.Context) {
 	var params model.Component
 	if err := c.ShouldBindQuery(&params); err != nil {
@@ -76,6 +94,13 @@ func (s *HTTPServer) GetComponentByType(c *gin.Context) {
 	}
 }
 
+// @Summary GetComponentByType
+// @Description Get Component By Type
+// @Param id path int true "Component ID"
+// @Success 200 {object} object
+// @Failure 400
+// @Failure 500
+// @Router /api/components/{id} [get]
 func (s *HTTPServer) GetComponentById(c *gin.Context) {
 	componentID, err := strconv.ParseInt(c.Param("id"), 10, 32)
 	if err != nil {
@@ -90,6 +115,13 @@ func (s *HTTPServer) GetComponentById(c *gin.Context) {
 	}
 }
 
+// @Summary GetComponentByType
+// @Description Get Component By Type
+// @Param id path int true "Component ID"
+// @Success 200 {object} object
+// @Failure 400
+// @Failure 500
+// @Router /api/components/{id} [delete]
 func (s *HTTPServer) DeleteComponentById(c *gin.Context) {
 	componentID, err := strconv.ParseInt(c.Param("id"), 10, 32)
 	if err != nil {
